update tambahan assignment week-3

--- a/week-3/Index.html
+++ b/week-3/Index.html
@@ -84,9 +84,9 @@
                 <div class="nav-menu">
                     <!--menu search-->
                     <div class="search-container">
-                        <form action="/action_page.php">
+                        <form class="find" action="/action_page.php">
                             <input type="text" placeholder="Hello, what are you searching for?" name="search">
-                            <button type="submit"><i class="fa fa-search"></i></button>
+                            <button class="cari" type="submit"><i class="fa fa-search"></i></button>
                         </form>
                     </div>
                     <a href="#Home">
@@ -225,7 +225,7 @@
                     </div>
                     <div>
                 </fieldset>
-                <button type="submit">Submit</button>
+                <button class="submit-member" type="submit">Submit</button>
             </form>
         </section>
     </main>
